@@ -1,3 +1,8 @@
+2006-04-07  Daniel Stone  <daniel@freedesktop.org>
+
+	* src/XKBui.c:
+	Coverity #789: Fix memory leak.
+
 2006-03-27  Daniel Stone  <daniel@freedesktop.org>
 
 	* src/XKBui.c:
